--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-godot (3.0.6-2) UNRELEASED; urgency=medium
+godot (3.0.6-1) unstable; urgency=medium
 
   [ Federico Ceratto ]
   * Initial release (Closes: #793057)
 
- -- Federico Ceratto <federico@debian.org>  Sun, 26 Aug 2018 11:25:14 +0100
+ -- Federico Ceratto <federico@debian.org>  Sun, 26 Aug 2018 20:42:31 +0100
