Switch to source format 3.0 (quilt)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+godot (3.0.6-2) UNRELEASED; urgency=medium
+
+  * Switch to source format 3.0 (Closes: #914617)
+
+ -- Federico Ceratto <federico@debian.org>  Sun, 25 Nov 2018 19:51:03 +0000
+
 godot (3.0.6-1) unstable; urgency=medium
 
   [ Federico Ceratto ]
