--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-godot (3.0.6-2) UNRELEASED; urgency=medium
+godot (3.0.6-2) unstable; urgency=medium
 
   * Switch to source format 3.0 (Closes: #914617)
   * Remove binary dependencies, thanks  Jeremy Bicha (Closes: #914618)
   * Support 32-bit architectures (Closes: #914609, #914620, #914624)
 
- -- Federico Ceratto <federico@debian.org>  Sun, 25 Nov 2018 19:51:03 +0000
+ -- Federico Ceratto <federico@debian.org>  Sat, 01 Dec 2018 21:04:44 +0000
 
 godot (3.0.6-1) unstable; urgency=medium
 
