--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-godot (3.2.1-stable-1) UNRELEASED; urgency=medium
+godot (3.2.3-stable-1) UNRELEASED; urgency=medium
 
+  [ Federico Ceratto ]
   * New upstream release
 
- -- Federico Ceratto <federico@debian.org>  Wed, 25 Mar 2020 19:43:11 +0000
+  [ Dominik George ]
+  * New upstream release
+
+ -- Dominik George <natureshadow@debian.org>  Wed, 28 Oct 2020 13:23:51 +0100
 
 godot (3.2-stable-2) unstable; urgency=medium
 
