--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ godot (3.2.3-stable-1) UNRELEASED; urgency=medium
   * New upstream release
   * Bump Standards-Version
     + No changes needed.
-  * Install icon (thanks to Salman Mohammadi).
+  * Install icon (thanks to Salman Mohammadi, closes #956684).
   * Add myself to Uploaders to track package.
+  * 
 
  -- Dominik George <natureshadow@debian.org>  Wed, 28 Oct 2020 13:23:51 +0100
 
