--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-godot (3.2.3-stable-1) UNRELEASED; urgency=medium
+godot (3.2.3-stable-1) unstable; urgency=medium
 
   [ Federico Ceratto ]
   * New upstream release
@@ -6,13 +6,12 @@ godot (3.2.3-stable-1) UNRELEASED; urgency=medium
   [ Dominik George ]
   * New upstream release
   * Bump Standards-Version
-    + No changes needed.
-  * Install icon (Closes: #956684).
-  * Add myself to Uploaders to track package.
-  * 
-  * 
+    + No changes needed
+  * Install icon (Closes: #956684)
+  * Add myself to Uploaders to trak package
+  * Thanks to Teckids e.V. and credativ GmbH for sponsoring the work
 
- -- Dominik George <natureshadow@debian.org>  Wed, 28 Oct 2020 13:23:51 +0100
+ -- Dominik George <natureshadow@debian.org>  Wed, 28 Oct 2020 13:56:05 +0100
 
 godot (3.2-stable-2) unstable; urgency=medium
 
