Fix typo in changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-godot (3.2.3-stable-2) unstable; urgency=medium
+godot (3.2.3-stable-2) UNRELEASED; urgency=medium
 
-  * Build godot3-dev pacakge
+  * Build godot3-dev package
 
  -- Dominik George <natureshadow@debian.org>  Sun, 22 Nov 2020 18:36:42 +0100
 
