--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+godot (3.2.3-stable-3) unstable; urgency=medium
+
+  * Rebuild
+
+ -- Federico Ceratto <federico@debian.org>  Sat, 06 Feb 2021 12:21:34 +0000
+
 godot (3.2.3-stable-2) unstable; urgency=high
 
   [ Dominik George ]
